--- a/app/src/main/res/layout/best_list_item.xml
+++ b/app/src/main/res/layout/best_list_item.xml
@@ -33,13 +33,14 @@
 
         <TextView
             android:id="@+id/title_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/subreddit_name"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="Title goes here" />
 
         <ImageView
