--- a/app/src/main/res/layout/fragment_listing_main.xml
+++ b/app/src/main/res/layout/fragment_listing_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/best_list_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
