--- a/app/src/main/res/layout/fragment_listing_main.xml
+++ b/app/src/main/res/layout/fragment_listing_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature.listingMain.ListingMainFragment">
+    tools:context=".feature.home.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_list"
