PostDetail renamed to Post

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/postDetailFragment"
-        android:name="com.zestworks.myriadforreddit.feature.postDetail.PostDetailFragment"
+        android:name="com.zestworks.myriadforreddit.feature.post.PostFragment"
         android:label="fragment_post_detail"
         tools:layout="@layout/fragment_listing_main">
         <argument
